1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add it.

	* acsizes.m4 (md_CHECK_SIZES): New file, new macro.

1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acxpm.m4 (md_STRUCT_XPM_ALLOCPIXELS): New macro.

	* acjdk.m4 (JAVASWARMSCRIPTS): New substitution.	

1999-04-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (JAVASWARMLIBS): New substitution.

1999-04-24  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add acargp.m4.

	* acargp.m4: New file.

1999-04-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: New substitution JAVACMD, and JAVAENV (used in JAVA, 
	when present).

1999-04-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Use libexec/Kaffe instead of bin/Kaffe.
	Prepend $JAR_CLASSPATH as CLASSPATH for jar if it is set.

1999-04-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Add JAR substitution (include set of JAVA_HOME).
	(JAVAINCLUDES): Use solaris or genunix alternatively (not both),
	depending on existance of $jdkdir/include/solaris/jni_md.h.
	(JAVASTUBS_FUNCTION):  Substitute. Avoid Unicode mangling for Kaffe.
	(JAVALIBS, JAVAC): Substitute.
	(JAVA): For Kaffe, set LD_LIBRARY_PATH to JAVALIBS.

1999-04-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (jv_FIND_JDK): Use simply the japhar datadir instead of
	datadir/classes.zip.  Add test for kaffe class and include file
	locations.  Substitute java, japhar, or kaffe to JAVA.

1999-03-31  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (vj_FIND_JDK): Add check for japhar's JNI include files.
	Add JAVACLASSES substitution.

1999-03-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (vj_FIND_JDK): Don't substitute JAR or go out of the
	way to set JAVAC.

1999-03-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (vj_FIND_JDK): Move AC_MSG_CHECKING after potential
	calls to AC_PATH_PROG.
