@@ -1,3 +1,8 @@
+1999-04-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* acxpm.m4 (md_FIND_XPM): Check for xpm.h in $xpmincludedir
+	and $xpmincludedir/X11, and define HAVE_X11_XPM_H or HAVE_XPM_H.
+
 1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* Makefile.am (EXTRA_DIST): Add it.
